--- a/index.html
+++ b/index.html
@@ -1,89 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-    <link rel="stylesheet" href="/second/assest/css/main.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="container">
-      <nav class="navbar">
-        <div class="logo">Start Bootstrap</div>
-        <ul class="nav-links">
-          <div class="menu">
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#Portolio">Portolio</a></li>
-            <li><a href="/">Contact</a></li>
-          </div>
-        </ul>
-      </nav>
-      <header class="masthead">
-        <div class="content_m1">
-          <h1>Your Favorite Place for Free Bootstrap Themes</h1>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet"
+    href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+  <link rel="stylesheet" href="assest/css/main.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="container">
+    <nav class="navbar">
+      <div class="logo">Start Bootstrap</div>
+      <ul class="nav-links">
+        <div class="menu">
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#Portolio">Portolio</a></li>
+          <li><a href="/">Contact</a></li>
         </div>
-        <hr class="Hr-5" />
-        <p class="tx-5">
-          Start Bootstrap can help you build better websites using the Bootstrap
-          framework! Just download a theme and start customizing, no strings
-          attached!
-        </p>
-        <a class="btn-x1" href="#about">Find Out More</a>
-      </header>
-    </div>
-    <section class=" bg-primary" id="about">
-      <div class="container-primary">
-          <div class="row ">
-              <div class="colx2">
-                  <h2 class="text-center">We've got what you need!</h2>
-                  <hr class="divider">
-              </div>
-          </div>
-          <p class="tx-5">
-            Start Bootstrap can help you build better websites using the Bootstrap
-            framework! Just download a theme and start customizing, no strings
-            attached!
-          </p>
-          <a class="btn" href="#services">Get Started!</a>
+      </ul>
+    </nav>
+    <header class="masthead">
+      <div class="content_m1">
+        <h1>Your Favorite Place for Free Bootstrap Themes</h1>
       </div>
-  </section>
-  <section class=" bg-third" id="services">
-    <div class="container-Third">
-      <h2 class="text-center2">At Your Service</h2>
-      <hr class="divider">
-      <div class="icons-Third">
-        <i class="las la-gem"></i>
-        <h3 class="pl-24">Sturdy Themes</h3>
-        <p class="pl-24-3">Our themes</p>
-        <div class="icons-Thirds"> 
-          <i class="las la-laptop"></i>
+      <hr class="Hr-5" />
+      <p class="tx-5">
+        Start Bootstrap can help you build better websites using the Bootstrap
+        framework! Just download a theme and start customizing, no strings
+        attached!
+      </p>
+      <a class="btn-x1" href="#about">Find Out More</a>
+    </header>
+  </div>
+  <section class=" bg-primary" id="about">
+    <div class="container-primary">
+      <div class="row ">
+        <div class="colx2">
+          <h2 class="text-center">We've got what you need!</h2>
+          <hr class="divider">
         </div>
       </div>
+      <p class="tx-5">
+        Start Bootstrap can help you build better websites using the Bootstrap
+        framework! Just download a theme and start customizing, no strings
+        attached!
+      </p>
+      <a class="btn" href="#services">Get Started!</a>
     </div>
   </section>
+  <section id="service">
+    <div class="p-t">
+        <p class="mg-l-p2 p-color-black">At Your Service</p>
+        <hr class="divider">
+        <div class="div-display-inline">
+        </div>
+        <div class="li-mg-t">
+            <ul>
+                <li class="dp-inline-li"><i class="pad-size  mg-left-gem las la-gem">
+                        <p class="p-saturdy">Sturdy Themes</p>
+                        <p class="p-saturdy-child">Our themes are updated regularly to keep them bug free!
+                        </p>
+                    </i>
+                </li>
+                <li class="dp-inline-li"><i class="pad-size2 las la-laptop">
+                        <p class="p-uptodate">Up to Date</p>
+                        <p class="p-uptodate-child">All dependencies are kept current to keep things fresh.
+                        </p>
+                    </i>
+                </li>
+                <li class="dp-inline-li"><i class="pad-size2 las la-globe">
+                        <p class="p-uptodate p-readytopublish">Ready to Publish</p>
+                        <p class="p-uptodate-child">You can use this design as is, or you can make changes!
+                        </p>
+                    </i>
+                </li>
+                <li class="dp-inline-li"><i class="lar la-heart pad-size2">
+                        <p class="p-uptodate">Up to Date</p>
+                        <p class="p-uptodate-child">Is it really open source if it's not made with love?</p>
+                    </i>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
   <section class=" bg-thirds" id="Portolio">
-    <table BORDER=0 CELLSPACING=0 > 
-      <tr >
-        <td><img src="https://startbootstrap.github.io/startbootstrap-creative/assets/img/portfolio/fullsize/1.jpg" width="633"></td>
-        <td><img src="https://startbootstrap.github.io/startbootstrap-creative/assets/img/portfolio/fullsize/2.jpg" width="633"></td>
-        <td><img src="https://startbootstrap.github.io/startbootstrap-creative/assets/img/portfolio/fullsize/3.jpg" width="633"></td>
+    <table BORDER=0 CELLSPACING=0>
+      <tr>
+        <td><img src="https://startbootstrap.github.io/startbootstrap-creative/assets/img/portfolio/fullsize/1.jpg"
+            width="633"></td>
+        <td><img src="https://startbootstrap.github.io/startbootstrap-creative/assets/img/portfolio/fullsize/2.jpg"
+            width="633"></td>
+        <td><img src="https://startbootstrap.github.io/startbootstrap-creative/assets/img/portfolio/fullsize/3.jpg"
+            width="633"></td>
       </tr>
-      <tr >
-        <td><img src="https://startbootstrap.github.io/startbootstrap-creative/assets/img/portfolio/fullsize/4.jpg" width="633" ></td>
-        <td><img src="https://startbootstrap.github.io/startbootstrap-creative/assets/img/portfolio/fullsize/5.jpg" width="633"></td>
-        <td><img src="https://startbootstrap.github.io/startbootstrap-creative/assets/img/portfolio/fullsize/6.jpg" width="633"></td>
+      <tr>
+        <td><img src="https://startbootstrap.github.io/startbootstrap-creative/assets/img/portfolio/fullsize/4.jpg"
+            width="633"></td>
+        <td><img src="https://startbootstrap.github.io/startbootstrap-creative/assets/img/portfolio/fullsize/5.jpg"
+            width="633"></td>
+        <td><img src="https://startbootstrap.github.io/startbootstrap-creative/assets/img/portfolio/fullsize/6.jpg"
+            width="633"></td>
       </tr>
     </table>
   </section>
   <section class="page-section bg-dark text-white">
     <div class="container ">
-        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a class="btn  " href="https://startbootstrap.com/theme/creative/">Download Now!</a>
-      </div>
-    </section>
-    
-  </body>
+      <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
+      <a class="btn  " href="https://startbootstrap.com/theme/creative/">Download Now!</a>
+    </div>
+  </section>
+
+</body>
+
 </html>
