--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet"
     href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
   <link rel="stylesheet" href="assest/css/main.css" />
@@ -113,8 +114,41 @@
       <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
       <a class="btn  " href="https://startbootstrap.com/theme/creative/">Download Now!</a>
     </div>
+    <section id="contact">
+      <div class="div-padding-top">
+          <p class="p-color-black ">Let's Get In Touch!</p>
+          <hr class="divider">
+          <p class="p3-main p3-main-color">Ready to start your next project with us? Send us a messages and we
+              will get back
+              to you as soon as possible!</p>
+          <div class="Form-div">
+              <form>
+                  <br />
+                  <div class="firstname">
+                      <input class="form-control" type="text" id="fname" name="fname"
+                          placeholder="First Name" /><br />
+                  </div>
+                  <div class="email">
+                      <input class="form-control" type="email" id="emails" name="emails"
+                          placeholder="Email Address" />
+                      <br />
+                  </div>
+                  <div class="phonenumber">
+                      <input class="form-control" type="text" id="pnumber" name="pnumber"
+                          placeholder="Phone Number" />
+                      <br />
+                  </div>
+                  <div class="content">
+                      <textarea class="form-control textheightbox" name="message" id="message" cols="20"
+                          rows="10" placeholder="Message"></textarea>
+                      <br />
+                  </div>
+              </form>
+              <a href="#" class="buttonsubmit">Submit</a>
+          </div>
+      </div>
   </section>
-
+  </section>
 </body>
 
 </html>
