--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
       </tr>
     </table>
   </section>
-  <section class="page-section bg-dark text-white">
+  <section class="page-section bg-dark">
     <div class="container ">
       <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
       <a class="btn  " href="https://startbootstrap.com/theme/creative/">Download Now!</a>
     </div>
-    <section id="contact">
-      <div class="div-padding-top">
+    <section class="bg-white" id="contact">
+      <div class="div-padding-top ">
           <p class="p-color-black ">Let's Get In Touch!</p>
           <hr class="divider">
           <p class="p3-main p3-main-color">Ready to start your next project with us? Send us a messages and we
